# pesto

./: .gitignore  .gitmodules  CMakeLists.txt  build_and_run.bat  readme.md
.cache/clangd/index/: AlphaBitmap.h.B2853086A7B5BF8D.idx  BaseTypes.h.612E7D6E943C79B3.idx  BitScale.cpp.332F9CC4B2D077A9.idx  BitScale.h.DB42D00EAC7A7232.idx  BitUtility.h.E84898FE8D5EEB5F.idx  Bitmap.h.F1E27499716D31CB.idx  CodeGen.cpp.AE638371CDB8CA6D.idx  ColorRgba.h.38F9400CBBA4D1A8.idx  Common.h.B74C4CC40BFA5563.idx  Constant.cpp.A33E60CDEF755A63.idx  ConstantUnion.h.C0F3A87CFE60CAC2.idx  DebugInfo.h.4160272494187BB5.idx  DirStackFileIncluder.h.4DD8CC46D717C238.idx  EnumClassBitmasks.h.C630FC4CE873C17E.idx  GLSL.ext.AMD.h.9990204ED2FF8F5C.idx  GLSL.ext.ARM.h.7B9E4BEFBB906425.idx  GLSL.ext.EXT.h.ED8722745DAFAECC.idx  GLSL.ext.KHR.h.CE52078F15870BB7.idx  GLSL.ext.NV.h.D08DCCDE7386073F.idx  GLSL.std.450.h.26A50B82917FCA0C.idx  GLSL.std.450.h.D9BC7B9C0B87B82B.idx  GLSL.std.450.h.EBB0A42567130B89.idx  GLSL.std.450.h.F2154BAF9F096BA9.idx  GlslangToSpv.cpp.7B3DEF07BA3BDD31.idx  GlslangToSpv.h.E6AE0558AE0E41E8.idx  InReadableOrder.cpp.654338A8ADD42035.idx  InfoSink.cpp.560985044761A3D2.idx  InfoSink.h.864903B5C0DBFB39.idx  Initialize.cpp.445554019A6B94AD.idx  Initialize.h.5762009D43DD9FE1.idx  InitializeDll.cpp.673B5CE6B2BC74CE.idx  InitializeDll.h.4D42E3C1F300A3FA.idx  InitializeGlobals.h.36719327062F7817.idx  IntermTraverse.cpp.A085D9E33601D7AF.idx  Intermediate.cpp.5A72A25A1414764A.idx  Interval.h.146CA411DBED4164.idx  Link.cpp.F458739DD4F7BC0C.idx  LiveTraverser.h.FFC3108D6531E1FC.idx  Logger.cpp.75B17B10C7937868.idx  Logger.h.904DAFCFEBB75DA6.idx  (+1417 more)
cmake/: AssetCompiler.cmake
examples/: CMakeLists.txt
examples/hello-world/: CMakeLists.txt  main.cpp
include/pesto/: loader.hpp  pesto.hpp  resource_loading.hpp  time.hpp
include/pesto/gfx/: renderer.hpp  texture.hpp
include/pesto/input/: input.hpp
include/pesto/loader/: loader.hpp
include/pesto/window/: window.hpp
lib/: CMakeLists.txt
src/: initializer.hpp  loader.cpp  pesto.cpp  pesto.hpp  resource_loading.cpp  server.hpp  time.hpp  util.hpp
src/camera/: camera.cpp  camera.hpp
src/gfx/: render.cpp  render.hpp  renderer.cpp  renderer.hpp  shader.hpp  sprite.hpp  texture.hpp  vertex.hpp
src/input/: input.cpp  input.hpp
src/loader/: loader.cpp  loader.hpp
src/object/: object.hpp
src/window/: window.cpp  window.hpp
test/: CMakeLists.txt
test/sprites/: CMakeLists.txt
test/sprites/res/shaders/sprite/: fs_sprite.sc  varying.def.sc  vs_sprite.sc
test/sprites/src/: main.cpp
